refactor: aplica lombok, remove autowired e muda collect para tolist